--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 // colors
-$primary-colors: #3fd0d4;
+$primary-color: #3fd0d4;
 $main-white: #fff;
 $off-white: #f7f7f7;
 $main-black: #222;
@@ -12,3 +12,9 @@ $light-shadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
 
 // Fonts-family
 $body-font: "Lato", sans-serif;
+
+// Transition
+$main-transition: all 0.3s linear;
+
+//Spacing
+$main-spacing: 4px;
