Update Layout component

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -60,3 +60,9 @@ p {
   background: transparent;
   color: $primary-color;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
